--- a/epub/ProGit.css
+++ b/epub/ProGit.css
@@ -6,12 +6,13 @@ ol {
 	margin: 20px;
 }
 
-body pre {
+body pre2 {
 	margin: 10px;
 	font-weight: bold;
 }
 
-body pre2 {
+body pre {
+	font-family: 'monospace';
 	background-color: silver;
 	padding: 10px;
 	border-top-style: solid;
